# pscircle-fork

./: .gitignore  .gitlab-ci.yml  .ycm_extra_conf.py  CHANGELOG.md  README.md  config.h.meson  meson.build
examples/: 01-left.sh  04-bottom.sh  09-topleft.sh  font-and-colors.sh  gnome.sh  left.sh  minimal.sh  no-toplists-headers.sh  no-toplists.sh  pscircle-pywal.sh  pscircle.service  white-colors.sh
include/: argparser.h  cfg.h  color.h  input_linux.h  input_stream.h  list.h  node.h  painter.h  pnode.h  point.h  ppoint.h  proc_linux.h  process.h  procs.h  ptree.h  reals.h  timing.h  toplist_visualizer.h  types.h  visualizer.h
src/: argparser.c  cfg.c  color.c  input_linux.c  input_stream.c  list.c  node.c  painter.c  pnode.c  point.c  ppoint.c  proc_linux.c  proc_stream.c  procs.c  pscircle.c  ptree.c  reals.c  timing.c  toplist_visualizer.c  tree_visualizer.c  utils.c  visualizer.c
tests/: .ycm_extra_conf.py  argparser.cc  cfg.cc  color.cc  list.cc  meson.build  node.cc  pnode.cc  point.cc  ppoint.cc  procs.cc  ptree.cc  reals.cc  test_color.cpp
